Fixed Header img/title overlapping issue.Changed container widths to fix top & dynamic nav alignment issues.

--- a/style.css
+++ b/style.css
@@ -23,33 +23,52 @@ body, html {
     margin: auto auto;
 }
 
+#header {
+    width: auto;
+    height: 50px;
+    display: inline-block;
+    /* background-color: chocolate; */
+    margin: 26px 0 0 26px;
+}
+
+#title_container {
+    display: inline-block;
+    height: auto;
+    width: auto;
+    /* background-color: darkcyan; */
+    vertical-align: top;
+    margin: 2px 5px 0 0;
+}
+
 .enso {
     display: inline-block;
-    height: 5.98%;
+    height: 50px;
     width: auto; 
     /* margin: 2.3% 0% 0% 2.1%; */
-    margin: 33px 0 0px 30px;
-    position: absolute;
+    /* margin: 33px 0 0px 30px; */
+    /* position: absolute; */
 }
 
 .name {
     display: inline-block;
     color: white;
-    position: relative;
-    margin: 3.5% 0% 0% 9%;
+    /* position: relative; */
+    /* margin: 3.5% 0% 0% 9%; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
     font-size: 20px;
+    margin: 2px 0px 0 0;
 }
 
 .subtitle {
     display: inline-block;
     color: white;
-    margin-left: 10.7%;
+    /* margin-left: 10.7%; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: lighter;
     font-size: 13px;
     letter-spacing: 2px;
+    margin-left: 16px;
 }
 
 .nav_home {
@@ -58,8 +77,8 @@ body, html {
     text-align: center;
     display: inline-block;
     position: absolute;
-    margin-left: 350px;
-    margin-top: -50px;
+    margin-left: 360px;
+    /* margin-top: -50px; */
     border-bottom: 4px solid #f61f70;
     cursor:pointer;
 	cursor:hand;
@@ -71,8 +90,8 @@ body, html {
     text-align: center;
     display: inline-block;
     position: absolute;
-    margin-left: 460px;
-    margin-top: -50px;
+    margin-left: 470px;
+    /* margin-top: -50px; */
     cursor:pointer;
 	cursor:hand;
 }
@@ -83,8 +102,8 @@ body, html {
     text-align: center;
     display: inline-block;
     position: absolute;
-    margin-left: 570px;
-    margin-top: -50px;
+    margin-left: 580px;
+    /* margin-top: -50px; */
     cursor:pointer;
 	cursor:hand;
 }
@@ -99,7 +118,7 @@ body, html {
 
 .title {
     color: white;
-    margin: 150px 0px 0px -225px;
+    margin: 200px 0px 0px -240px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 700;
     font-size: 60px;
@@ -110,7 +129,7 @@ body, html {
 
 .summary {
     color: white;
-    margin: 260px 0px 0px -223px;
+    margin: 310px 0px 0px -238px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: lighter;
     font-size: 16px;
@@ -186,16 +205,23 @@ body, html {
 
 .nav_container {
     height: 60px;
-    width: 65%;
+    width: 1000px;
     text-align: center;
 }
 
 .dynamic_nav_title {
     height: 60px;
-    width: 250px;
+    width: auto;
     /* background-color: chocolate; */
     float: left;
     vertical-align: top;
+    margin-left: 28px;
+}
+
+#dynamic_nav_titles_container {
+    display: inline-block;
+    width: auto;
+    height: auto;
 }
 
 .dynamic_nav_title > img {
@@ -205,7 +231,7 @@ body, html {
     float: left;
 }
 
-.dynamic_nav_title > h1 {
+#dynamic_nav_titles_container > h1 {
     color: rgb(41, 41, 41);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
@@ -213,7 +239,7 @@ body, html {
     margin: 10px 45px 0px 0px;
 }
 
-.dynamic_nav_title > p {
+#dynamic_nav_titles_container > p {
     color: rgb(41, 41, 41);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: lighter;
@@ -255,7 +281,7 @@ body, html {
 
 .project_container {
     height: 27.4%;
-    width: 62%;
+    width: 1000px;
     /* background-color: darkgoldenrod; */
     /* border-bottom: 1px solid rgb(233, 232, 232); */
 }
@@ -263,7 +289,7 @@ body, html {
 .project_display {
     height: 60%;
     width: auto;
-    margin: 14% 0% 0% 2%;
+    margin: 14% 0% 0% 3%;
     display: inline-block;
 }
 
